LIST OF CHANGES FOR NPG-QC PACKAGE

release 61.1
 - SeqQC
   - Using --force-latest for bower install deps during Build
 - improve test robustness (larger page sample for mech to check)
 - VerifyBamId pass/fail threshold change

release 61.0
 - using test matrix with node 4.4.2 and 0.12.9 for travis
 - help page for manual qc
 - redesign of both client and server side for generic qc outcome updates
 - updates to already stored outcomes, including final outcomes,
     are not an error, will be skipped
 - require that all library outcomes are marked explicitly before the
     final sequencing outcome is saved
 - custom class for authentication in tests - works with JSON POST requests
 - mqc widgets not shown if no lims data available
 - title for pages with data for one id run show run status
 - SeqQC
   - bugfix only build request for qc_outcomes if rptkeys in page
   - upgrading jquery to 2.2.3 from 2.1.4
   - upgrading requirejs to 2.2.0 from 2.1.20
   - upgrading bcviz to 1.3.2 from 1.3.1
   - upgrading table-export to 1.5.0 from 1.2.2
   - upgrading qunit to 1.23.0 from 1.20.0
 - add unique db constraint for short descriptions in qc outcome
   dictionaries; the constraints should have been set when the tables
   were created 

release 60.0
 - JSON service (retrieval) for qc outcomes
 - update link to picard in POD
 - SeqQC:
   - remove use of autocrud plugin - it's never been used
   - simplify the authorisation and it make more secure (do not fetch
     user credentials from the url), move the code to a new User model
   - in tests extend the User model to allow for getting user credentials
     from the url
   - avoid warnings in tests by setting the default for the username to
     an empty string
   - if the user is logged in and is authorised to do manual qc, display
     a visual cue on the top of the page
   - tag metrics column moved next to the column with tag index and tag sequence
   - show deplexing percent for individual tags in tag metrics column