@@ -1,0 +1,24 @@
+<div id="collapse_menu">
+<ul>
+<li><b>Collapse</b></li>
+<li><a id="collapse_all_results" href="#" class="collapse_icon">-</a>
+    <a id="expand_all_results" href="#" class="collapse_icon">+</a>
+    <b>all results</b></li>
+<li><a id="collapse_phix" href="#" class="collapse_icon">-</a>
+    <a id="expand_phix" href="#" class="collapse_icon">+</a>
+    <i>phiX</i></li>
+
+[%- FOREACH check_name IN checks_list -%]
+  [%- IF (check_name != "contamination" && check_name != "sequence mismatch phix" && check_name != "bam flagstats phix" && check_name != "spatial filter") %]
+    [%- label_name = check_name; IF check_name == "sequence mismatch"; label_name='seq. mismatch'; ELSIF check_name == "alignment filter metrics"; label_name='alignment filter'; END;%]
+    <li><a href="#" data-section='[% check_name %]' class="collapse_h2 collapse_icon">-</a>
+        <a href="#" data-section='[% check_name %]' class="expand_h2 collapse_icon">+</a>
+        [% label_name %]</li>
+  [%- END -%]
+[%- END -%]
+<li>
+    <a href='#' data-section='[% heatmap_check_name %]' class='collapse_h2 collapse_icon'>-</a>
+    <a href='#' data-section='[% heatmap_check_name %]' class='expand_h2 collapse_icon'>+</a>
+    heatmap</li>
+</ul>
+</div>
